# zyre

./: .gitignore  .travis.yml  AUTHORS  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FindCZMQ.cmake  FindZeroMQ.cmake  Findczmq.cmake  Jenkinsfile  Makefile.am  NEWS  README.md  README.txt  Vagrantfile  acinclude.m4  appveyor.yml  autogen.sh  ci_build.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  configure.in  generate.sh  license.xml  project.gyp  project.xml  setup.py  version.sh
.github/workflows/: CI.yaml
.obs/: workflows.yml
C/: .gitignore  AUTHORS  COPYING.LESSER  Makefile.am  configure.in
C/doc/: mkman
C/examples/: listener.c
C/include/: zre.h  zre_group.h  zre_interface.h  zre_internal.h  zre_log.h  zre_log_msg.h  zre_msg.h  zre_peer.h  zre_udp.h
C/model/: codec_c.gsl  generate  library.gsl  zre_log_msg.xml  zre_msg.xml
C/src/: Makefile.am  zre_group.c  zre_interface.c  zre_log.c  zre_log_msg.c  zre_logger.c  zre_msg.c  zre_peer.c  zre_perf_local.c  zre_perf_remote.c  zre_ping.c  zre_tester.c  zre_udp.c  zyre.c
Java/: README  gen-zyre-jeromq.sh  pom.xml
Java/model/: codec_java.gsl  generate  library.gsl  license.xml
api/: python_cffi.slurp  zyre.api  zyre.xml  zyre_event.api  zyre_event.xml
bindings/: .gitignore
bindings/delphi/: Zyre.pas  libzyre.pas
bindings/jni/: .gitignore  CMakeLists.txt  Findzyre.cmake  README.md  build.gradle  ci_build.sh  settings.gradle
bindings/jni-v1/: CMakeLists.txt
bindings/jni/android/: CMakeLists.txt  android_toolchain.cmake  build.sh
bindings/jni/gradle/wrapper/: gradle-wrapper.properties
bindings/jni/msvc/: configure.bat  resource.rc
bindings/jni/msvc/vs2010/: build.bat  zyre.sln
bindings/jni/msvc/vs2010/libzyrejni/: libzyrejni.props  libzyrejni.vcxproj  libzyrejni.vcxproj.filters
bindings/jni/msvc/vs2012/: build.bat  call_javah.bat  zyre.sln
bindings/jni/msvc/vs2012/libzyrejni/: libzyrejni.props  libzyrejni.vcxproj
bindings/jni/msvc/vs2013/: build.bat  call_javah.bat  zyre.sln
bindings/jni/msvc/vs2013/libzyrejni/: libzyrejni.props  libzyrejni.vcxproj  libzyrejni.vcxproj.filters
bindings/jni/msvc/vs2015/: build.bat  zyre.sln
bindings/jni/msvc/vs2015/libzyrejni/: libzyrejni.props  libzyrejni.vcxproj
bindings/jni/src/main/c/: org_zeromq_Zyre.c  org_zeromq_ZyreEvent.c  org_zeromq_zyre_Zyre.c  org_zeromq_zyre_ZyreEvent.c  zyre.c
bindings/jni/src/main/java/org/zeromq/: Zyre.java  ZyreEvent.java
bindings/jni/src/main/java/org/zeromq/zyre/: Zyre.java  ZyreEvent.java
bindings/jni/src/test/java/org/zeromq/zyre/: ZyreEventTest.java  ZyreTest.java
bindings/jni/zyre-jni/: CMakeLists.txt  Findzyre.cmake  build.gradle
bindings/jni/zyre-jni-all/: build.gradle
bindings/jni/zyre-jni-native/: build.gradle
bindings/jni/zyre-jni/android/: CMakeLists.txt  build.sh
bindings/jni/zyre-jni/src/main/c/: org_zeromq_zyre_Zyre.c  org_zeromq_zyre_ZyreEvent.c
bindings/jni/zyre-jni/src/main/java/org/zeromq/zyre/: Zyre.java  ZyreEvent.java
bindings/jni/zyre-jni/src/native/include/: org_zeromq_zyre_Zyre.h  org_zeromq_zyre_ZyreEvent.h
bindings/jni/zyre-jni/src/test/java/org/zeromq/zyre/: ZyreEventTest.java  ZyreTest.java
bindings/lua_ffi/: zyre_ffi.lua
bindings/nodejs/: .gitignore  .prebuildrc  README.md  binding.cc  binding.gyp  binding.h  build.sh  index.js  loadatom  package.json  test.js  zpinger.js
bindings/python/: _project.py  ci_build.sh  setup.py  test.py  zyre.py
bindings/python_cffi/: README.md  setup.py  zyre_cffi.py
bindings/qml/: README.md  qml_zyre_bindings.pro
bindings/qt/: README.md  common.pri  config.pri  qtzyre.pro  qzyre.pro
builds/android/: Android.mk  README.md  android_build_helper.sh  build.sh  ci_build.sh
builds/check_zproject/: ci_build.sh
builds/check_zproto/: ci_build.sh
builds/cmake/: ci_build.sh  clang-format-check.sh.in
builds/cygwin/: Makefile.cygwin
builds/debian/: control  rules  zyre.dsc
builds/gyp/: .gitignore  README.md  platform.h  project.gyp
builds/mingw32/: Makefile.mingw32
builds/msvc/: configure.bat  platform.h  resource.h  zyre.rc
builds/qt-android/: android_build_helper.sh  build.sh  ci_build.sh
builds/rpi/: .gitignore  README.md  build.sh  prepare_img.sh
builds/spec/: zyre.spec
builds/valgrind/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  libzre.txt  mkman  rfc20.txt  zpinger.doc  zpinger.txt  zre_log_msg.txt  zre_msg.doc  zre_msg.txt  zyre.adoc  zyre.doc  zyre.txt  zyre_event.doc  zyre_event.txt  zyre_group.txt  zyre_log.txt  zyre_node.txt  zyre_peer.txt
examples/: LICENSE  listener.c  sender.c
examples/chat/: Makefile.am  Makefile.in  chat.c
examples/jni/: pom.xml
examples/minimal/: minimal.c
include/: Makefile.am  zre.h  zre_group.h  zre_internal.h  zre_log_msg.h  zre_msg.h  zre_node.h  zre_peer.h  zre_udp.h  zre_uuid.h  zyre.h  zyre_api.h  zyre_event.h  zyre_library.h  zyre_log.h  zyre_logmsg.h  zyre_msg.h  zyre_node.h  zyre_prelude.h
java/: README.md
java/model/: generate  license.xml
model/: build-cmake.gsl  build-vs2010.gsl  build-vs2012.gsl  build-vs2013.gsl  codec_c.gsl  codec_java.gsl  generate  library.gsl  project.gsl  project.xml  zre_log_msg.xml  zre_msg.xml
packaging/debian/: changelog  control  copyright  libzyre-dev.install  libzyre1.install  libzyre2.install  rules  zyre-dev.install  zyre.dsc  zyre.dsc.obs  zyre.install  zyre.manpages
src/: .gitignore  CMakeLists-local.txt  Makefile.am  Makemodule-local.am  Makemodule.am  libzre.pc.in  libzyre.pc.in  perf_local.c  perf_remote.c  selftest  zpinger.c  zre_group.c  zre_log_msg.bnf  zre_log_msg.c  zre_log_msg.xml  zre_logger.c  zre_msg.bnf  zre_msg.c  zre_msg.h  zre_msg.xml  zre_node.c  zre_peer.c  zre_perf_remote.c  zre_selftest.c  zre_tester.c  zre_udp.c  zre_uuid.c  ztester_beacon.c  ztester_gossip.c  zyre.c  zyre_classes.h  zyre_election.c  zyre_election.h  zyre_event.c  zyre_group.c  zyre_group.h  zyre_log.c  zyre_log.h  zyre_logmsg.c  zyre_msg.c  (+9 more)
tools/: Makefile.am  logger.c  perf_local.c  perf_remote.c  pinger.c  tester.c  zlogger.c  zpinger.c  ztester.c  ztester_beacon.c  ztester_gossip.c
(+207 files in other folders)
